Customer details upgraded

--- a/static/partials/showcustomers.html
+++ b/static/partials/showcustomers.html
@@ -1,5 +1,6 @@
  <div class = "well" ng-init = "init()">
   <div  class="table-responsive">
+  <h1> Below is the customers details </h1>
  <table st-table="rowCollection" class="table table-striped">
   <thead>
   <tr>
